# xwd

./: CMakeLists.txt  README.md  install.sh
services/runit/: run.in
services/systemd/: xwd.service.in
src/: \  config.cpp  config.hpp  image.cpp  image.hpp  ipc_server.cpp  ipc_server.hpp  main.cpp  monitors.cpp  monitors.hpp  root_atoms.cpp  root_atoms.hpp  stb_image_impl.cpp  wallpaper.cpp  wallpaper.hpp  wallpaper_v.cpp  wallpaper_v.hpp  xcb_check.hpp  xcb_context.hpp  xcb_pxf.cpp  xcb_pxf.hpp  xwdctl.cpp
src/shm/: shm_seg.cpp  shm_seg.hpp  xcb_shm_check.cpp  xcb_shm_check.hpp
